# rl_uav_aerostack2

./: .gitignore  README.md  pyproject.toml
as2_sim/: launch_sim.bash  stop_sim.bash
as2_sim/config/: config.yaml  pid_speed_controller.yaml  uav_config.yaml  world.yaml
as2_sim/tmuxinator/: aerostack2.yaml
as2_sim/utils/: get_drones.py
rl_uav/: __init__.py
rl_uav/envs/: __init__.py  as2_test_env.py
scripts/: test_connection.py
